# mception

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml  server.json
docs/: example.mception.yml
examples/: docker.mcp.json  mcp.json
examples/demo_evil/: evil.py
examples/demo_full/: package.json  pyproject.toml  server.py  setup.py
packaging/: build_bundle.py  build_mcpb.py  entry.py  manifest.json  mception.spec
src/mception/: __init__.py  cli.py  config.py  findings.py  llm_judge.py  report.py  scoring.py  server.py  storage.py
src/mception/engines/: __init__.py  base.py  baseline.py  cross_config.py  dispatch.py  fetcher.py  metadata.py  sast.py  sca.py  source_parse.py  transport.py
src/mception/rules/: code_rules.py  go_rules.py  node_rules.py  ruby_rules.py  rust_rules.py  supply_chain.py  surface.py  text_rules.py  transport_rules.py
tests/: test_audit_end_to_end.py  test_baseline.py  test_code_rules.py  test_cross_config.py  test_fp_harness.py  test_llm_judge.py  test_multilang.py  test_report.py  test_scoring.py  test_source_parse.py  test_supply_chain.py  test_text_rules.py  test_transport_rules.py
tests/fixtures/servers/node_dev_only_osv/: expected.json  package.json
tests/fixtures/servers/node_figma_plugin/: code.js  expected.json  manifest.json
tests/fixtures/servers/node_real_exec/: expected.json  package.json
tests/fixtures/servers/node_real_exec/src/: index.js
tests/fixtures/servers/node_regex_exec/: expected.json  package.json
tests/fixtures/servers/node_regex_exec/src/: index.js
tests/fixtures/servers/python_method_exec/: expected.json  mcp_server.py
tests/fixtures/servers/python_subprocess/: expected.json  mcp_server.py
