[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mception"
version = "0.5.0"
description = "MCP server that audits other MCP servers for security risks"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "mception" }]
keywords = ["mcp", "security", "audit", "llm", "ai-security"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]
dependencies = [
    "mcp>=1.2.0",
    "pydantic>=2.6",
    "httpx>=0.27",
    "anyio>=4.4",
    "rich>=13.7",
]

[project.optional-dependencies]
sast = [
    "bandit>=1.7",
    "semgrep>=1.70; platform_system != 'Windows'",
]
sca = [
    "cyclonedx-bom>=4.4",
    "rapidfuzz>=3.9",
    "packaging>=24.0",
]
# Build a portable single-file executable that bundles Python + runtime deps.
# Only needed if you run `python packaging/build_bundle.py` to produce `dist/mception(.exe)`.
bundle = [
    "pyinstaller>=6.0",
]
# Note: the optional LLM judge does NOT need an API key. It uses the MCP
# `sampling/createMessage` primitive so the host agent's own model answers.
all = [
    "mception[sast,sca]",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[project.scripts]
mception = "mception.cli:main"

[project.urls]
Homepage = "https://github.com/mception/mception"
Issues = "https://github.com/mception/mception/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mception"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S"]
ignore = ["S101"]  # allow assert in tests
